--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.12",
     "react-table": "^6.5.3",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^4.4.1",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
